Fixed a bug where text boxes would be misaligned on the office page

--- a/src/app/pages/office/components/fault-comment/fault-comment.scss
+++ b/src/app/pages/office/components/fault-comment/fault-comment.scss
@@ -9,7 +9,8 @@
   }
 
   .text-area-padding {
-    padding-left: var(--ion-padding, 16px);
+    padding-right: 25px;
+    right: 15px;
   }
 
   .text-area-colour {
